# CloudOps-Triage-Env

./: Dockerfile  README.md  app.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  graders.py  models.py
